<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/myColorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:textColor="@color/white_ffffff"/>

    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/et_cellPhoneNum"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_solid_white_grey"
        android:ems="11"
        android:inputType="phone"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:hint="@string/phone_number"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_solid_white_grey"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:hint="@string/password"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cellPhoneNum" />

    <View
        android:id="@+id/view_verificationCode"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_solid_white_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <EditText
        android:id="@+id/et_verificationCode"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/transparent"
        android:hint="@string/verification_code"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/view_verificationCode"
        app:layout_constraintEnd_toStartOf="@+id/view_line_verification"
        app:layout_constraintStart_toStartOf="@+id/view_verificationCode"
        app:layout_constraintTop_toTopOf="@+id/view_verificationCode" />

    <View
        android:id="@+id/view_line_verification"
        android:layout_width="1px"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/grey_bababa"
        app:layout_constraintBottom_toBottomOf="@+id/view_verificationCode"
        app:layout_constraintEnd_toEndOf="@+id/view_verificationCode"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/view_verificationCode"
        app:layout_constraintTop_toTopOf="@+id/view_verificationCode" />

    <Button
        android:id="@+id/bt_getVerificationCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/transparent"
        android:text="@string/get_verification_code"
        android:textColor="@color/myColorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/view_verificationCode"
        app:layout_constraintEnd_toEndOf="@+id/view_verificationCode"
        app:layout_constraintStart_toEndOf="@+id/view_line_verification"
        app:layout_constraintTop_toTopOf="@+id/view_verificationCode"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bt_register"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_button"
        android:text="@string/register"
        android:textColor="@color/white_ffffff"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_verificationCode" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/transparent"
        android:text="@string/login"
        android:textSize="16sp"
        android:textColor="@color/myColorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_register" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />


</android.support.constraint.ConstraintLayout>